# qt_cmake_unittests

./: CMakeLists.txt
src/: CMakeLists.txt
test/: CMakeLists.txt  test.cpp
